# makerscanner

./: Makefile.am  README.md  configure.ac
src/: ActiveStereoMain.cpp  ActiveStereoMain.h  Cameras.cpp  Cameras.h  CaptureThread.cpp  CaptureThread.h  DistanceToReferenceDialog.cpp  DistanceToReferenceDialog.h  IndividualPixels.h  PointCloud.cpp  PointCloudPoint.cpp  ScanThread.cpp  ScanThread.h  camview.cpp  camview.h
